# distinction-bench

./: .gitignore  CLAUDE.md  README.md  README.org  arc-example.json  pyproject.toml
.beads/: issues.jsonl
demo/: .12a--parens-test.png-autosave.kra  01--circle-01.kra  11--hooks-01.kra  13--visual-transforms.kra  demo.org
logs/: 2025-12-15T18-06-27+00-00_single-lof-task_WJ8d7dCMEKohtz9s26pidR.eval  2025-12-15T18-16-04+00-00_single-lof-task_gKrKMKAmTFA8uDqTqkcQmw.eval  2025-12-15T18-51-52+00-00_single-lof-task_ifQKGvv8hLQ3SaL6AFAB27.eval  2025-12-15T18-54-08+00-00_composite-lof-task_cUGwfi77g8TaP2nMGW9A7j.eval  2025-12-15T19-13-51+00-00_composite-lof-task_JThQxq6Hc8AR8cXgg6G7Lj.eval  2025-12-15T19-13-58+00-00_composite-lof-task_6wa6YbyaHBSWaLSs5SUqg9.eval  2025-12-15T19-16-13+00-00_composite-lof-task_PzDKzXoAhbNqXck3toRiLj.eval  2025-12-15T19-44-26+00-00_single-lof-task_2TLQux8Mxm9xCgsSMHhfEG.eval  2025-12-15T19-59-39+00-00_single-lof-task_7D79W9HFN2ZtKRiEDnHPk3.eval  2025-12-15T20-34-07+00-00_composite-lof-task_jut2N5Zm5MqF6ncXE2NLTh.eval  2025-12-15T20-34-46+00-00_composite-lof-task_kmuakwt9jCiH4DxN5bECKV.eval  2025-12-15T20-35-44+00-00_composite-lof-task_9nMiv2tMBWpZAme27NyH4G.eval  2025-12-15T20-45-53+00-00_single-lof-task_6B2yGRcAYKZsLRzUSxork8.eval  2025-12-15T20-55-21+00-00_composite-lof-task_TBdu2btpGZPLsZXxfLgdRZ.eval  2025-12-15T22-21-07+00-00_composite-lof-task_QrhotzwdS9kzxEnXCH3SZh.eval  2025-12-15T22-40-38+00-00_composite-lof-task_oEzcbuUiTFTRc6mFQLb4uc.eval  2025-12-15T23-06-07+00-00_composite-lof-task_We9dgQa2yRtatnaBRkovZ5.eval  2025-12-15T23-10-31+00-00_composite-lof-task_BYpNexcCn9LPcENxcuQLwe.eval  2025-12-15T23-19-22+00-00_composite-lof-task_6nhCqvXMzxe3f3d4X6sqZr.eval  2025-12-16T00-18-09+00-00_composite-lof-task_cHsSo3rK6BgqLufEnSbfkw.eval  2025-12-16T00-19-14+00-00_composite-lof-task_LtNDPzwiE5rinoD7ioR5zP.eval
notebooks/: analysis-df.org  analysis.org  code.inc  composite_test_cases.json  data-history.org  demo-charts.org  design.org  emoji-examples.txt  eval-notebook.org  evaluation-thoughts.org  failure-examples.org  lof-reference.org  measurement.org  results.json  sample_results.json  scratch.org  test_cases.json  text-excerpts.org
notebooks/feedback/: acer-feedback.org  chase-feedback.org  mary-feedback.org  nicky-feedback.org  patrick-feedback.org  sqcu-feedback.org
src/lofbench/: __init__.py  analysis.py  core.py  (+1 more)
tests/: test_core.py  test_eval.py  test_renderers.py  test_scorers.py
(+15 files in other folders)
