[project]
name = "lofbench"
version = "0.1.0"
description = "Laws of Form benchmark toolkit"
readme = {file = "README.org", content-type = "text/plain"}
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "google-genai>=1.55.0",
    "inspect-ai>=0.3.154",
    "matplotlib>=3.10.8",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
]

[project.optional-dependencies]
eval = [
    "anthropic>=0.75.0",
    "google-genai>=1.55.0",
    "openai>=2.11.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
analysis = [
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lofbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "playwright>=1.57.0",
    "pytest>=9.0.2",
]
